[project]
name = "gather-ctx"
version = "0.1.0"
description = "Gather context files into a prompt-ready format"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tiktoken>=0.12.0",
]

[project.scripts]
gather_ctx = "gather_ctx:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
